src/daedalus/daeParser.output
Terminales no usados en gramática

   PLANNING
   CONFORMANT1
   CONFORMANT2
   ND_MDP
   MDP
   ND_POMDP1
   ND_POMDP2
   POMDP1
   POMDP2
   BOGUS
   BOGUS2
   BOGUS3
   BOGUS4


Gramática

    0 $accept: start $end

    1 start: code_chunks

    2 code_chunks: code_chunks domain
    3            | code_chunks problem
    4            | /* vacío */

    5 $@1: /* vacío */

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR

    7 global_list: global_list global LEFTPAR
    8            | global LEFTPAR

    9 global: MODEL model_def RIGHTPAR
   10       | REQUIREMENTS requirement_list RIGHTPAR
   11       | TYPES type_list RIGHTPAR
   12       | FUNCTIONS function_list RIGHTPAR
   13       | PREDICATES predicate_list RIGHTPAR
   14       | EXTERNAL external_list RIGHTPAR
   15       | OBJECTS object_list RIGHTPAR

   16 model_def: model_def dynamics_def
   17          | model_def feedback_def
   18          | /* vacío */

   19 dynamics_def: LEFTPAR DYNAMICS DETERMINISTIC RIGHTPAR
   20             | LEFTPAR DYNAMICS NON_DETERMINISTIC RIGHTPAR
   21             | LEFTPAR DYNAMICS PROBABILISTIC RIGHTPAR

   22 feedback_def: LEFTPAR FEEDBACK COMPLETE RIGHTPAR
   23             | LEFTPAR FEEDBACK PARTIAL RIGHTPAR
   24             | LEFTPAR FEEDBACK NULLF RIGHTPAR

   25 requirement_list: requirement_list requirement
   26                 | requirement

   27 $@2: /* vacío */

   28 requirement: LEFTPAR PACKAGE TOK_IDENT RIGHTPAR $@2 rest_requirement

   29 rest_requirement: package

   30 type_list: type_list type_def
   31          | type_def

   32 type_def: TOK_IDENT ancestor_list
   33         | TOK_IDENT

   34 ancestor_list: ancestor_list ancestor
   35              | ancestor

   36 ancestor: COLON COLON TOK_IDENT

   37 function_list: function_list function
   38              | function

   39 function: LEFTPAR TOK_IDENT compound_type_decl simple_type_decl RIGHTPAR

   40 predicate_list: predicate_list predicate
   41               | predicate

   42 predicate: LEFTPAR TOK_IDENT simple_type_decl_list RIGHTPAR

   43 compound_type_decl: simple_type_decl
   44                   | LEFTPAR simple_type_decl_list RIGHTPAR
   45                   | ARRAY LEFTSQPAR TOK_INTEGER RIGHTSQPAR simple_type_decl

   46 simple_type_decl: TOK_IDENT
   47                 | integer_type
   48                 | boolean_type

   49 integer_type: INTEGER range

   50 range: LEFTSQPAR TOK_INTEGER COMMA TOK_INTEGER RIGHTSQPAR

   51 boolean_type: BOOLEAN

   52 simple_type_decl_list: simple_type_decl_list simple_type_decl
   53                      | simple_type_decl

   54 external_list: external_list external_decl
   55              | external_decl

   56 external_decl: LEFTPAR FUNCTION TOK_IDENT compound_type_decl simple_type_decl RIGHTPAR
   57              | LEFTPAR PREDICATE TOK_IDENT simple_type_decl_list RIGHTPAR
   58              | LEFTPAR PROCEDURE TOK_IDENT RIGHTPAR

   59 object_list: object_list object_def
   60            | object_def

   61 object_def: ident_list HYPHEN TOK_IDENT
   62           | ident_list HYPHEN integer_type
   63           | ident_list HYPHEN boolean_type
   64           | ident_list HYPHEN ARRAY LEFTSQPAR TOK_INTEGER RIGHTSQPAR simple_type_decl

   65 ident_list: ident_list TOK_IDENT
   66           | TOK_IDENT

   67 definition_list: definition_list definition LEFTPAR
   68                | /* vacío */

   69 definition: logical_def

   70 $@3: /* vacío */

   71 $@4: /* vacío */

   72 logical_def: PREDICATE LEFTPAR TOK_IDENT $@3 parameter_list $@4 RIGHTPAR formula RIGHTPAR

   73 ramification_list: ramification_def LEFTPAR ramification_list
   74                  | /* vacío */

   75 $@5: /* vacío */

   76 ramification_def: RAMIFICATION TOK_IDENT $@5 optional_parameter ramification_def_rest

   77 ramification_def_rest: FORMULA formula RIGHTPAR
   78                      | EFFECT atomic_effect_list RIGHTPAR

   79 optional_parameter: PARAMETERS parameter_list
   80                   | /* vacío */

   81 parameter_list: parameter_list parameter
   82               | parameter

   83 parameter: variable_list HYPHEN simple_type_decl

   84 variable_list: variable_list TOK_VIDENT
   85              | TOK_VIDENT

   86 action_list: action_list LEFTPAR action_def
   87            | action_def

   88 $@6: /* vacío */

   89 action_def: ACTION action_name $@6 action_body_list RIGHTPAR

   90 action_name: TOK_IDENT

   91 action_body_list: action_body_list action_body
   92                 | /* vacío */

   93 action_body: PARAMETERS parameter_list
   94            | PRECONDITION precondition_formula

   95 $@7: /* vacío */

   96 action_body: EFFECT $@7 effect_list
   97            | COST cost
   98            | OBSERVATION observation

   99 precondition_formula: formula

  100 formula: atomic_formula
  101        | LEFTPAR NOT formula RIGHTPAR
  102        | LEFTPAR AND formula_list RIGHTPAR
  103        | LEFTPAR OR formula_list RIGHTPAR
  104        | LEFTPAR IF formula formula RIGHTPAR
  105        | LEFTPAR IFF formula formula RIGHTPAR

  106 $@8: /* vacío */

  107 formula: LEFTPAR EXISTS TOK_VIDENT HYPHEN TOK_IDENT optional_inline $@8 formula RIGHTPAR

  108 $@9: /* vacío */

  109 formula: LEFTPAR FORALL TOK_VIDENT HYPHEN TOK_IDENT optional_inline $@9 formula RIGHTPAR

  110 optional_inline: INLINE
  111                | /* vacío */

  112 formula_list: formula_list formula
  113             | formula

  114 atomic_formula: LEFTPAR predicate_symbol term_list RIGHTPAR
  115               | LEFTPAR EQUAL term term RIGHTPAR
  116               | LEFTPAR IN term LEFTCURLY term_list RIGHTCURLY RIGHTPAR

  117 predicate_symbol: primitive_predicate_symbol
  118                 | TOK_PREDICATE

  119 primitive_predicate_symbol: LT
  120                           | LE
  121                           | GE
  122                           | GT

  123 term_list: term_list term
  124          | /* vacío */

  125 term: TOK_VIDENT
  126     | TOK_IDENT optional_subscript
  127     | value
  128     | LEFTPAR TOK_FUNCTION term_list RIGHTPAR
  129     | LEFTPAR primitive_function_symbol term_list RIGHTPAR
  130     | STAR term

  131 $@10: /* vacío */

  132 term: LEFTPAR SUM TOK_VIDENT HYPHEN TOK_IDENT optional_inline $@10 term RIGHTPAR
  133     | LEFTPAR IF formula term term RIGHTPAR
  134     | LEFTPAR FORMULA formula RIGHTPAR

  135 optional_subscript: LEFTSQPAR term RIGHTSQPAR
  136                   | /* vacío */

  137 value: TOK_INTEGER
  138      | TOK_BOOLEAN

  139 primitive_function_symbol: PLUS optional_modulo
  140                          | HYPHEN optional_modulo

  141 optional_modulo: LT TOK_INTEGER GT
  142                | /* vacío */

  143 effect_list: atomic_effect_list
  144            | LEFTPAR PROBABILISTIC probabilistic_effect_list RIGHTPAR
  145            | LEFTPAR NON_DETERMINISTIC non_deterministic_effect_list RIGHTPAR

  146 atomic_effect_list: atomic_effect_list atomic_effect
  147                   | atomic_effect

  148 atomic_effect: basic_effect
  149              | LEFTPAR WHEN formula basic_effect_list RIGHTPAR

  150 $@11: /* vacío */

  151 atomic_effect: LEFTPAR FOREACH TOK_VIDENT HYPHEN TOK_IDENT $@11 atomic_effect_list RIGHTPAR

  152 basic_effect_list: basic_effect_list basic_effect
  153                  | basic_effect

  154 basic_effect: LEFTPAR SET term term RIGHTPAR
  155             | LEFTPAR SET LEFTPAR TOK_PREDICATE term_list RIGHTPAR term RIGHTPAR
  156             | LEFTPAR SET LEFTPAR TOK_PREDICATE term_list RIGHTPAR formula RIGHTPAR
  157             | LEFTPAR PRINT term RIGHTPAR
  158             | LEFTPAR PRINT formula RIGHTPAR
  159             | LEFTPAR PRINTSTATE RIGHTPAR
  160             | LEFTPAR TOK_PROCEDURE RIGHTPAR

  161 init_set_effect: LEFTPAR SET term IN LEFTCURLY term_list RIGHTCURLY optional_assert RIGHTPAR
  162                | LEFTPAR SET term IN integer_type optional_assert RIGHTPAR
  163                | LEFTPAR SET LEFTPAR TOK_PREDICATE term_list RIGHTPAR IN LEFTCURLY term_list RIGHTCURLY optional_assert RIGHTPAR
  164                | LEFTPAR ONEOF atomic_init_effect_list RIGHTPAR
  165                | formula

  166 optional_assert: ASSERT formula
  167                | /* vacío */

  168 probabilistic_effect_list: probabilistic_effect_list probabilistic_effect
  169                          | probabilistic_effect

  170 probabilistic_effect: LEFTPAR TOK_FLOAT atomic_effect_list RIGHTPAR

  171 non_deterministic_effect_list: non_deterministic_effect_list non_deterministic_effect
  172                              | non_deterministic_effect

  173 non_deterministic_effect: LEFTPAR atomic_effect_list RIGHTPAR

  174 cost: term

  175 observation: observation_list
  176            | LEFTPAR PROBABILISTIC probabilistic_observation_list RIGHTPAR
  177            | LEFTPAR NON_DETERMINISTIC non_deterministic_observation_list RIGHTPAR

  178 observation_list: observation_list atomic_observation
  179                 | atomic_observation

  180 atomic_observation: formula
  181                   | term
  182                   | LEFTPAR WHEN formula formula RIGHTPAR
  183                   | LEFTPAR WHEN formula term RIGHTPAR

  184 $@12: /* vacío */

  185 atomic_observation: LEFTPAR VECTOR TOK_VIDENT HYPHEN TOK_IDENT $@12 term RIGHTPAR

  186 probabilistic_observation_list: probabilistic_observation_list probabilistic_observation
  187                               | probabilistic_observation

  188 probabilistic_observation: LEFTPAR TOK_FLOAT observation_list RIGHTPAR

  189 non_deterministic_observation_list: non_deterministic_observation_list non_deterministic_observation
  190                                   | non_deterministic_observation

  191 non_deterministic_observation: LEFTPAR observation_list RIGHTPAR

  192 $@13: /* vacío */

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

  194 problem_def_list: problem_def_list problem_def
  195                 | /* vacío */

  196 problem_def: LEFTPAR INIT init_def RIGHTPAR
  197            | LEFTPAR GOAL goal_def RIGHTPAR
  198            | LEFTPAR OBJECTS object_list RIGHTPAR
  199            | LEFTPAR HOOKS hook_list RIGHTPAR

  200 init_def: atomic_init_effect_list

  201 goal_def: formula
  202         | CERTAINTY

  203 atomic_init_effect_list: atomic_init_effect_list atomic_init_effect
  204                        | atomic_init_effect

  205 atomic_init_effect: basic_effect
  206                   | init_set_effect
  207                   | LEFTPAR WHEN formula atomic_init_effect_list RIGHTPAR

  208 $@14: /* vacío */

  209 atomic_init_effect: LEFTPAR FOREACH TOK_VIDENT HYPHEN TOK_IDENT $@14 atomic_init_effect_list RIGHTPAR

  210 hook_list: hook_list hook
  211          | hook

  212 hook: LEFTPAR MODEL TOK_STRING RIGHTPAR
  213     | LEFTPAR BELIEF TOK_STRING RIGHTPAR
  214     | LEFTPAR HEURISTIC TOK_STRING RIGHTPAR

  215 $@15: /* vacío */

  216 package: LEFTPAR PACKAGE TOK_IDENT $@15 rest_package

  217 rest_package: RIGHTPAR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DEFINE (258) 6 193
PDOMAIN (259) 6
CDOMAIN (260) 193
PROBLEM (261) 193
REQUIREMENTS (262) 10
TYPES (263) 11
FUNCTION (264) 56
FUNCTIONS (265) 12
PREDICATE (266) 57 72
PREDICATES (267) 13
PROCEDURE (268) 58
EXTERNAL (269) 14
OBJECTS (270) 15 198
ACTION (271) 89
PARAMETERS (272) 79 93
PRECONDITION (273) 94
EFFECT (274) 78 96
COST (275) 97
OBSERVATION (276) 98
WHEN (277) 149 182 183 207
INIT (278) 196
GOAL (279) 197
PACKAGE (280) 28 216
RAMIFICATION (281) 76
FORMULA (282) 77 134
SET (283) 154 155 156 161 162 163
IN (284) 116 161 162 163
ONEOF (285) 164
PRINT (286) 157 158
PRINTSTATE (287) 159
ASSERT (288) 166
HOOKS (289) 199
BELIEF (290) 213
HEURISTIC (291) 214
MODEL (292) 9 212
PLANNING (293)
CONFORMANT1 (294)
CONFORMANT2 (295)
ND_MDP (296)
MDP (297)
ND_POMDP1 (298)
ND_POMDP2 (299)
POMDP1 (300)
POMDP2 (301)
DYNAMICS (302) 19 20 21
DETERMINISTIC (303) 19
NON_DETERMINISTIC (304) 20 145 177
PROBABILISTIC (305) 21 144 176
FEEDBACK (306) 22 23 24
COMPLETE (307) 22
PARTIAL (308) 23
NULLF (309) 24
INTEGER (310) 49
BOOLEAN (311) 51
ARRAY (312) 45 64
LEFTPAR (313) 6 7 8 19 20 21 22 23 24 28 39 42 44 56 57 58 67 72 73
    86 101 102 103 104 105 107 109 114 115 116 128 129 132 133 134
    144 145 149 151 154 155 156 157 158 159 160 161 162 163 164 170
    173 176 177 182 183 185 188 191 193 196 197 198 199 207 209 212
    213 214 216
RIGHTPAR (314) 6 9 10 11 12 13 14 15 19 20 21 22 23 24 28 39 42 44
    56 57 58 72 77 78 89 101 102 103 104 105 107 109 114 115 116 128
    129 132 133 134 144 145 149 151 154 155 156 157 158 159 160 161
    162 163 164 170 173 176 177 182 183 185 188 191 193 196 197 198
    199 207 209 212 213 214 217
LEFTSQPAR (315) 45 50 64 135
RIGHTSQPAR (316) 45 50 64 135
LEFTCURLY (317) 116 161 163
RIGHTCURLY (318) 116 161 163
COLON (319) 36
STAR (320) 130
HYPHEN (321) 61 62 63 64 83 107 109 132 140 151 185 209
COMMA (322) 50
NOT (323) 101
AND (324) 102
OR (325) 103
IF (326) 104 133
IFF (327) 105
EQUAL (328) 115
LT (329) 119 141
LE (330) 120
GE (331) 121
GT (332) 122 141
PLUS (333) 139
EXISTS (334) 107
FORALL (335) 109
VECTOR (336) 185
SUM (337) 132
FOREACH (338) 151 209
INLINE (339) 110
CERTAINTY (340) 202
TOK_IDENT (341) 6 28 32 33 36 39 42 46 56 57 58 61 65 66 72 76 90 107
    109 126 132 151 185 193 209 216
TOK_VIDENT (342) 84 85 107 109 125 132 151 185 209
TOK_INTEGER (343) 45 50 64 137 141
TOK_FLOAT (344) 170 188
TOK_BOOLEAN (345) 138
TOK_STRING (346) 212 213 214
TOK_FUNCTION (347) 128
TOK_PREDICATE (348) 118 155 156 163
TOK_PROCEDURE (349) 160
BOGUS (350)
BOGUS2 (351)
BOGUS3 (352)
BOGUS4 (353)


No terminales con las reglas donde aparecen

$accept (99)
    en la izquierda: 0
start (100)
    en la izquierda: 1, en la derecha: 0
code_chunks (101)
    en la izquierda: 2 3 4, en la derecha: 1 2 3
domain (102)
    en la izquierda: 6, en la derecha: 2
$@1 (103)
    en la izquierda: 5, en la derecha: 6
global_list (104)
    en la izquierda: 7 8, en la derecha: 6 7
global (105)
    en la izquierda: 9 10 11 12 13 14 15, en la derecha: 7 8
model_def (106)
    en la izquierda: 16 17 18, en la derecha: 9 16 17
dynamics_def (107)
    en la izquierda: 19 20 21, en la derecha: 16
feedback_def (108)
    en la izquierda: 22 23 24, en la derecha: 17
requirement_list (109)
    en la izquierda: 25 26, en la derecha: 10 25
requirement (110)
    en la izquierda: 28, en la derecha: 25 26
$@2 (111)
    en la izquierda: 27, en la derecha: 28
rest_requirement (112)
    en la izquierda: 29, en la derecha: 28
type_list (113)
    en la izquierda: 30 31, en la derecha: 11 30
type_def (114)
    en la izquierda: 32 33, en la derecha: 30 31
ancestor_list (115)
    en la izquierda: 34 35, en la derecha: 32 34
ancestor (116)
    en la izquierda: 36, en la derecha: 34 35
function_list (117)
    en la izquierda: 37 38, en la derecha: 12 37
function (118)
    en la izquierda: 39, en la derecha: 37 38
predicate_list (119)
    en la izquierda: 40 41, en la derecha: 13 40
predicate (120)
    en la izquierda: 42, en la derecha: 40 41
compound_type_decl (121)
    en la izquierda: 43 44 45, en la derecha: 39 56
simple_type_decl (122)
    en la izquierda: 46 47 48, en la derecha: 39 43 45 52 53 56 64
    83
integer_type (123)
    en la izquierda: 49, en la derecha: 47 62 162
range (124)
    en la izquierda: 50, en la derecha: 49
boolean_type (125)
    en la izquierda: 51, en la derecha: 48 63
simple_type_decl_list (126)
    en la izquierda: 52 53, en la derecha: 42 44 52 57
external_list (127)
    en la izquierda: 54 55, en la derecha: 14 54
external_decl (128)
    en la izquierda: 56 57 58, en la derecha: 54 55
object_list (129)
    en la izquierda: 59 60, en la derecha: 15 59 198
object_def (130)
    en la izquierda: 61 62 63 64, en la derecha: 59 60
ident_list (131)
    en la izquierda: 65 66, en la derecha: 61 62 63 64 65
definition_list (132)
    en la izquierda: 67 68, en la derecha: 6 67
definition (133)
    en la izquierda: 69, en la derecha: 67
logical_def (134)
    en la izquierda: 72, en la derecha: 69
$@3 (135)
    en la izquierda: 70, en la derecha: 72
$@4 (136)
    en la izquierda: 71, en la derecha: 72
ramification_list (137)
    en la izquierda: 73 74, en la derecha: 6 73
ramification_def (138)
    en la izquierda: 76, en la derecha: 73
$@5 (139)
    en la izquierda: 75, en la derecha: 76
ramification_def_rest (140)
    en la izquierda: 77 78, en la derecha: 76
optional_parameter (141)
    en la izquierda: 79 80, en la derecha: 76
parameter_list (142)
    en la izquierda: 81 82, en la derecha: 72 79 81 93
parameter (143)
    en la izquierda: 83, en la derecha: 81 82
variable_list (144)
    en la izquierda: 84 85, en la derecha: 83 84
action_list (145)
    en la izquierda: 86 87, en la derecha: 6 86
action_def (146)
    en la izquierda: 89, en la derecha: 86 87
$@6 (147)
    en la izquierda: 88, en la derecha: 89
action_name (148)
    en la izquierda: 90, en la derecha: 89
action_body_list (149)
    en la izquierda: 91 92, en la derecha: 89 91
action_body (150)
    en la izquierda: 93 94 96 97 98, en la derecha: 91
$@7 (151)
    en la izquierda: 95, en la derecha: 96
precondition_formula (152)
    en la izquierda: 99, en la derecha: 94
formula (153)
    en la izquierda: 100 101 102 103 104 105 107 109, en la derecha:
    72 77 99 101 104 105 107 109 112 113 133 134 149 156 158 165 166
    180 182 183 201 207
$@8 (154)
    en la izquierda: 106, en la derecha: 107
$@9 (155)
    en la izquierda: 108, en la derecha: 109
optional_inline (156)
    en la izquierda: 110 111, en la derecha: 107 109 132
formula_list (157)
    en la izquierda: 112 113, en la derecha: 102 103 112
atomic_formula (158)
    en la izquierda: 114 115 116, en la derecha: 100
predicate_symbol (159)
    en la izquierda: 117 118, en la derecha: 114
primitive_predicate_symbol (160)
    en la izquierda: 119 120 121 122, en la derecha: 117
term_list (161)
    en la izquierda: 123 124, en la derecha: 114 116 123 128 129 155
    156 161 163
term (162)
    en la izquierda: 125 126 127 128 129 130 132 133 134, en la derecha:
    115 116 123 130 132 133 135 154 155 157 161 162 174 181 183 185
$@10 (163)
    en la izquierda: 131, en la derecha: 132
optional_subscript (164)
    en la izquierda: 135 136, en la derecha: 126
value (165)
    en la izquierda: 137 138, en la derecha: 127
primitive_function_symbol (166)
    en la izquierda: 139 140, en la derecha: 129
optional_modulo (167)
    en la izquierda: 141 142, en la derecha: 139 140
effect_list (168)
    en la izquierda: 143 144 145, en la derecha: 96
atomic_effect_list (169)
    en la izquierda: 146 147, en la derecha: 78 143 146 151 170 173
atomic_effect (170)
    en la izquierda: 148 149 151, en la derecha: 146 147
$@11 (171)
    en la izquierda: 150, en la derecha: 151
basic_effect_list (172)
    en la izquierda: 152 153, en la derecha: 149 152
basic_effect (173)
    en la izquierda: 154 155 156 157 158 159 160, en la derecha: 148
    152 153 205
init_set_effect (174)
    en la izquierda: 161 162 163 164 165, en la derecha: 206
optional_assert (175)
    en la izquierda: 166 167, en la derecha: 161 162 163
probabilistic_effect_list (176)
    en la izquierda: 168 169, en la derecha: 144 168
probabilistic_effect (177)
    en la izquierda: 170, en la derecha: 168 169
non_deterministic_effect_list (178)
    en la izquierda: 171 172, en la derecha: 145 171
non_deterministic_effect (179)
    en la izquierda: 173, en la derecha: 171 172
cost (180)
    en la izquierda: 174, en la derecha: 97
observation (181)
    en la izquierda: 175 176 177, en la derecha: 98
observation_list (182)
    en la izquierda: 178 179, en la derecha: 175 178 188 191
atomic_observation (183)
    en la izquierda: 180 181 182 183 185, en la derecha: 178 179
$@12 (184)
    en la izquierda: 184, en la derecha: 185
probabilistic_observation_list (185)
    en la izquierda: 186 187, en la derecha: 176 186
probabilistic_observation (186)
    en la izquierda: 188, en la derecha: 186 187
non_deterministic_observation_list (187)
    en la izquierda: 189 190, en la derecha: 177 189
non_deterministic_observation (188)
    en la izquierda: 191, en la derecha: 189 190
problem (189)
    en la izquierda: 193, en la derecha: 3
$@13 (190)
    en la izquierda: 192, en la derecha: 193
problem_def_list (191)
    en la izquierda: 194 195, en la derecha: 193 194
problem_def (192)
    en la izquierda: 196 197 198 199, en la derecha: 194
init_def (193)
    en la izquierda: 200, en la derecha: 196
goal_def (194)
    en la izquierda: 201 202, en la derecha: 197
atomic_init_effect_list (195)
    en la izquierda: 203 204, en la derecha: 164 200 203 207 209
atomic_init_effect (196)
    en la izquierda: 205 206 207 209, en la derecha: 203 204
$@14 (197)
    en la izquierda: 208, en la derecha: 209
hook_list (198)
    en la izquierda: 210 211, en la derecha: 199 210
hook (199)
    en la izquierda: 212 213 214, en la derecha: 210 211
package (200)
    en la izquierda: 216, en la derecha: 29
$@15 (201)
    en la izquierda: 215, en la derecha: 216
rest_package (202)
    en la izquierda: 217, en la derecha: 216


estado 0

    0 $accept: . start $end

    $default  reduce usando la regla 4 (code_chunks)

    start        ir al estado 1
    code_chunks  ir al estado 2


estado 1

    0 $accept: start . $end

    $end  desplazar e ir al estado 3


estado 2

    1 start: code_chunks .
    2 code_chunks: code_chunks . domain
    3            | code_chunks . problem

    LEFTPAR  desplazar e ir al estado 4

    $default  reduce usando la regla 1 (start)

    domain   ir al estado 5
    problem  ir al estado 6


estado 3

    0 $accept: start $end .

    $default  aceptar


estado 4

    6 domain: LEFTPAR . DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR
  193 problem: LEFTPAR . DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    DEFINE  desplazar e ir al estado 7


estado 5

    2 code_chunks: code_chunks domain .

    $default  reduce usando la regla 2 (code_chunks)


estado 6

    3 code_chunks: code_chunks problem .

    $default  reduce usando la regla 3 (code_chunks)


estado 7

    6 domain: LEFTPAR DEFINE . LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR
  193 problem: LEFTPAR DEFINE . LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 8


estado 8

    6 domain: LEFTPAR DEFINE LEFTPAR . PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR
  193 problem: LEFTPAR DEFINE LEFTPAR . PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    PDOMAIN  desplazar e ir al estado 9
    PROBLEM  desplazar e ir al estado 10


estado 9

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN . TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 11


estado 10

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM . TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 12


estado 11

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT . RIGHTPAR $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR

    RIGHTPAR  desplazar e ir al estado 13


estado 12

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT . RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    RIGHTPAR  desplazar e ir al estado 14


estado 13

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR . $@1 LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR

    $default  reduce usando la regla 5 ($@1)

    $@1  ir al estado 15


estado 14

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR . LEFTPAR CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 16


estado 15

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 . LEFTPAR global_list definition_list ramification_list action_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 17


estado 16

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR . CDOMAIN TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    CDOMAIN  desplazar e ir al estado 18


estado 17

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR . global_list definition_list ramification_list action_list RIGHTPAR

    REQUIREMENTS  desplazar e ir al estado 19
    TYPES         desplazar e ir al estado 20
    FUNCTIONS     desplazar e ir al estado 21
    PREDICATES    desplazar e ir al estado 22
    EXTERNAL      desplazar e ir al estado 23
    OBJECTS       desplazar e ir al estado 24
    MODEL         desplazar e ir al estado 25

    global_list  ir al estado 26
    global       ir al estado 27


estado 18

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN . TOK_IDENT RIGHTPAR $@13 problem_def_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 28


estado 19

   10 global: REQUIREMENTS . requirement_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 29

    requirement_list  ir al estado 30
    requirement       ir al estado 31


estado 20

   11 global: TYPES . type_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 32

    type_list  ir al estado 33
    type_def   ir al estado 34


estado 21

   12 global: FUNCTIONS . function_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 35

    function_list  ir al estado 36
    function       ir al estado 37


estado 22

   13 global: PREDICATES . predicate_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 38

    predicate_list  ir al estado 39
    predicate       ir al estado 40


estado 23

   14 global: EXTERNAL . external_list RIGHTPAR

    LEFTPAR  desplazar e ir al estado 41

    external_list  ir al estado 42
    external_decl  ir al estado 43


estado 24

   15 global: OBJECTS . object_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 44

    object_list  ir al estado 45
    object_def   ir al estado 46
    ident_list   ir al estado 47


estado 25

    9 global: MODEL . model_def RIGHTPAR

    $default  reduce usando la regla 18 (model_def)

    model_def  ir al estado 48


estado 26

    6 domain: LEFTPAR DEFINE LEFTPAR PDOMAIN TOK_IDENT RIGHTPAR $@1 LEFTPAR global_list . definition_list ramification_list action_list RIGHTPAR
    7 global_list: global_list . global LEFTPAR

    REQUIREMENTS  desplazar e ir al estado 19
    TYPES         desplazar e ir al estado 20
    FUNCTIONS     desplazar e ir al estado 21
    PREDICATES    desplazar e ir al estado 22
    EXTERNAL      desplazar e ir al estado 23
    OBJECTS       desplazar e ir al estado 24
    MODEL         desplazar e ir al estado 25

    $default  reduce usando la regla 68 (definition_list)

    global           ir al estado 49
    definition_list  ir al estado 50


estado 27

    8 global_list: global . LEFTPAR

    LEFTPAR  desplazar e ir al estado 51


estado 28

  193 problem: LEFTPAR DEFINE LEFTPAR PROBLEM TOK_IDENT RIGHTPAR LEFTPAR CDOMAIN TOK_IDENT . RIGHTPAR $@13 problem_def_list RIGHTPAR

    RIGHTPAR  desplazar e ir al estado 52


estado 29

   28 requirement: LEFTPAR . PACKAGE TOK_IDENT RIGHTPAR $@2 rest_requirement

    PACKAGE  desplazar e ir al estado 53


estado 30

   10 global: REQUIREMENTS requirement_list . RIGHTPAR
   25 requirement_list: requirement_list . requirement

    LEFTPAR   desplazar e ir al estado 29
    RIGHTPAR  desplazar e ir al estado 54

    requirement  ir al estado 55


estado 31

   26 requirement_list: requirement .

    $default  reduce usando la regla 26 (requirement_list)


estado 32

   32 type_def: TOK_IDENT . ancestor_list
   33         | TOK_IDENT .

    COLON  desplazar e ir al estado 56

    $default  reduce usando la regla 33 (type_def)

    ancestor_list  ir al estado 57
    ancestor       ir al estado 58


estado 33

   11 global: TYPES type_list . RIGHTPAR
   30 type_list: type_list . type_def

    RIGHTPAR   desplazar e ir al estado 59
    TOK_IDENT  desplazar e ir al estado 32

    type_def  ir al estado 60


estado 34

   31 type_list: type_def .

    $default  reduce usando la regla 31 (type_list)


estado 35

   39 function: LEFTPAR . TOK_IDENT compound_type_decl simple_type_decl RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 61


estado 36

   12 global: FUNCTIONS function_list . RIGHTPAR
   37 function_list: function_list . function

    LEFTPAR   desplazar e ir al estado 35
    RIGHTPAR  desplazar e ir al estado 62

    function  ir al estado 63


estado 37

   38 function_list: function .

    $default  reduce usando la regla 38 (function_list)


estado 38

   42 predicate: LEFTPAR . TOK_IDENT simple_type_decl_list RIGHTPAR

    TOK_IDENT  desplazar e ir al estado 64


estado 39

   13 global: PREDICATES predicate_list . RIGHTPAR
   40 predicate_list: predicate_list . predicate

    LEFTPAR   desplazar e ir al estado 38
    RIGHTPAR  desplazar e ir al estado 65

    predicate  ir al estado 66


estado 40

   41 predicate_list: predicate .

    $default  reduce usando la regla 41 (predicate_list)


estado 41

   56 external_decl: LEFTPAR . FUNCTION TOK_IDENT compound_type_decl simple_type_decl RIGHTPAR
   57              | LEFTPAR . PREDICATE TOK_IDENT simple_type_decl_list RIGHTPAR
   58              | LEFTPAR . PROCEDURE TOK_IDENT RIGHTPAR
